# terminal

./: .clang-format  .gitignore  CMakeLists.txt  IMPROVEMENTS.md  README.md  build.bat  main.cpp  patch_ftxui.py  transform_commands.py
include/: CommandParser.hpp  CommandResolver.hpp  Commands.hpp  Config.hpp  ExternalExecutor.hpp  ForegroundJob.hpp  GlobExpander.hpp  Pipeline.hpp  PipelineExecutor.hpp  ShellTokenizer.hpp  Terminal.hpp  TuiScreen.hpp
include/commands/: BcCommand.hpp  DirCommands.hpp  FileCommands.hpp  ShellCommands.hpp  TextCommands.hpp
src/: CommandParser.cpp  CommandResolver.cpp  Commands.cpp  ExternalExecutor.cpp  ForegroundJob.cpp  GlobExpander.cpp  MoreCommand.cpp  ShellTokenizer.cpp  Terminal.cpp  TuiScreen.cpp
src/commands/: BcCommand.cpp  DirCommands.cpp  FileCommands.cpp  ShellCommands.cpp  TextCommands.cpp
tests/: ArgumentEscapingTest.cpp  CommandResolverTest.cpp  GlobExpanderTest.cpp  TailEdgeCaseTest.cpp  TokenizerTest.cpp
